QA-10595 Fixed main panel z-index

--- a/war/src/main/webapp/engines/jahia-anthracite/_edit_engine.scss
+++ b/war/src/main/webapp/engines/jahia-anthracite/_edit_engine.scss
@@ -103,7 +103,7 @@ div.engine-window {
 	}
 
 	//z-index: $ZINDEX--SIDE_PANEL--EDIT_ENGINE;
-	z-index: 1050!important;
+	z-index: 1031!important;
 
 	background: _property($BODY--BG, $EDIT-ENGINE);
     position: fixed!important;
